--- a/css/style.css
+++ b/css/style.css
@@ -31,8 +31,9 @@ nav a {
 }
 
 nav a:hover {
-  background-color: black;
-  height: 3em;
+  /* background-color: black;
+  height: 3em; */
+  color:orange;
 }
 
 main {
@@ -116,7 +117,7 @@ h3 {
   border-radius: 5px;
 }
 
-.formR {
+.formR, .formC {
   display: flex;
   flex-direction: column;
 }
@@ -170,7 +171,8 @@ input{
 }
 
 .hidden{
-visibility: hidden;
+/* visibility: hidden; */
+display: none;
 }
 
 .curseur{
@@ -198,3 +200,61 @@ visibility: hidden;
 .curseur.hidden{
   display:none;
 }
+
+.connect{
+  max-width: 500px;  
+}
+
+.connect h2{
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+
+.formCo div{
+  margin:20px
+}
+
+.profil{
+  max-width: 800px;
+}
+
+#grilleProfil{
+ display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  max-width: 60%;
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+.profil h2{
+  text-align: center;
+}
+
+.profil form{
+  margin: 20px;
+}
+
+.imgProfil{
+  display: flex;
+  flex-direction: column;
+justify-content: center;
+align-items: center;
+margin-bottom: 40px;
+}
+
+.imgProfil img{
+  max-width: 80px;
+}
+
+.profil p{
+  text-align: left;
+  color: rgb(224, 168, 13);
+}
+
+.btn{
+  display: flex;
+  margin-top: 50px;
+}
+
